Start page first API Query works

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Youtube Downloader</string>
+    <string name="video_title">title</string>
+    <string name="uploader_name">name</string>
+    <string name="video_duration">00:00</string>
+
 </resources>
