--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="action_search">Search</string>
+    <string name="action_home">action_home</string>
 
 </resources>
